--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,14 @@ body,
     height: 100%;
     margin: 0;
 }
+.grid-container {
+    display: grid;
+    width: 700px;
+    height: 400px;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 200px 1fr;
+}
+div {
+    background: #daa520;
+}
